# chatterbox-tts-api

./: .dockerignore  .env.example  .env.example.docker  .gitignore  AGENTS.md  API_README.md  CHANGELOG.md  DOCKER_README.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.uv  Dockerfile.uv.gpu  MIGRATION.md  Makefile  README.md  VOICE_UPLOAD_SUMMARY.md  api.py  docker-compose.cpu.yml  docker-compose.dockerhub.yml  docker-compose.gpu.yml  docker-compose.uv.gpu.yml  docker-compose.uv.yml  docker-compose.yml  docker-launch-cmd.sh  example_vc.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  start.py  test_api.py
.github/workflows/: docker-hub.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py
app/api/endpoints/: __init__.py  config.py  health.py  memory.py  models.py  speech.py  status.py  voices.py
app/core/: __init__.py  aliases.py  memory.py  status.py  text_processing.py  tts_model.py  version.py  voice_library.py
app/models/: __init__.py  requests.py  responses.py
assets/: female_american.flac
chatterbox/: .gitignore  example_tts.py
chatterbox/src/chatterbox/: __init__.py  vc.py
chatterbox/src/chatterbox/models/s3gen/: flow.py
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.dockerhub  Dockerfile.dockerhub.cpu  Dockerfile.gpu  Dockerfile.uv  Dockerfile.uv.gpu  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.uv.gpu.yml  docker-compose.uv.yml  docker-compose.yml
docs/: API_README.md  DOCKER_HUB_GUIDE.md  DOCKER_README.md  ENDPOINT_ALIASING.md  README.md  STATUS_API.md  STREAMING_API.md  UV_MIGRATION.md  VOICE_ALIAS_DEMO.md  VOICE_LIBRARY_MANAGEMENT.md  VOICE_UPLOAD_SUMMARY.md
frontend/: ARCHITECTURE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AudioHistory.tsx  Navigation.tsx  StatusHeader.tsx  StatusProgressOverlay.tsx  StatusStatisticsPanel.tsx  VoiceLibrary.tsx  VoiceUploadModal.tsx  modal.tsx  theme-toggle.tsx
frontend/src/components/tts/: AdvancedSettings.tsx  ApiEndpointSelector.tsx  AudioPlayer.tsx  StreamingProgress.tsx  TextInput.tsx  VoiceUpload.tsx  index.ts
frontend/src/components/ui/: card.tsx  dialog.tsx  drawer.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: use-is-mobile.tsx  use-mobile.tsx  use-mounted.tsx  useAdvancedSettings.ts  useApiEndpoint.ts  useAudioHistory.ts  useDefaultVoice.ts  useProgressSettings.ts  useStatusMonitoring.ts  useStreamingTTS.ts  useTextInput.ts  useVoiceLibrary.ts
frontend/src/lib/: version.ts
frontend/src/pages/: MemoryPage.tsx  TTSPage.tsx
frontend/src/services/: tts.ts
frontend/src/styles/: globals.css  shadcn.css
frontend/src/types/: index.ts
src/chatterbox/: tts.py
src/chatterbox/models/s3gen/: s3gen.py
src/chatterbox/models/t3/: t3.py
tests/: MIGRATION_GUIDE.md  README.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_memory.py  test_regression.py  test_sse_streaming.py  test_status.py  test_streaming_frontend.py  test_summary.py  test_voice_library.py  test_voice_upload.py
