[project]
name = "chatterbox-tts"
version = "69.1.2"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3"
]

[project.urls]
Homepage = "https://github.com/zrides/chatterbox"
Repository = "https://github.com/zrides/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
